# evalit-4me

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: arxiv.yaml  ieee.yaml  neurips.yaml  template.yaml
integrations/claude-code-skill/: SKILL.md  install.sh
integrations/claude-code-skill/helpers/: compare_records.py  detect_config.py  recompute_composite.py  run_multi_config.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: evalit.md
plugin/examples/: README.md  sample.docx  sample_arxiv.md  sample_fabricated.md  sample_failing.md  sample_ieee.md  sample_neurips.md
plugin/skills/evalit/: SKILL.md
scripts/: regenerate_samples.py  regenerate_samples.sh  smoke_test_plugin.sh
src/evalit_4me/: __init__.py  cli.py  config.py  contracts.py  skill_helpers.py
src/evalit_4me/audit/: __init__.py  disparate_impact.py  fairness.py
src/evalit_4me/dashboard/: __init__.py  app.py
src/evalit_4me/formatters/: __init__.py  html.py  json_out.py  reviewer.py  sections.py
src/evalit_4me/ingest/: __init__.py  dispatch.py  docx_parser.py  errors.py  marker_runner.py  parser.py  plumber_parser.py  quick_parser.py  reference_extractor.py
src/evalit_4me/llm/: __init__.py  anthropic_adapter.py  cache.py  cost.py  errors.py  mcp_sampling_adapter.py  openai_adapter.py  protocol.py  stub.py
src/evalit_4me/mcp_server/: __init__.py  server.py
src/evalit_4me/stages/: __init__.py  compliance.py  depth.py  orchestrate.py  rubric.py  scoring.py
src/evalit_4me/storage/: __init__.py  sqlite_log.py
tests/fixtures/expected/: fixtures.json
tests/fixtures/markdown/: paper_01_numbered_refs.md  paper_02_doi_heavy.md  paper_03_bulleted_refs.md  paper_04_no_refs_section.md  paper_05_mixed_refs.md
tests/plugin_samples/: test_samples_end_to_end.py
tests/unit/: test_anthropic_adapter.py  test_cli.py  test_compliance.py  test_contracts.py  test_dashboard.py  test_llm_cache.py  test_llm_cost.py  test_llm_protocol.py  test_llm_stub.py  test_marker_runner.py  test_mcp_sampling_adapter.py  test_mcp_server.py  test_openai_adapter.py  test_parser.py  test_quick_parser.py  test_reference_extractor.py  test_skill_helpers.py  test_venue_configs.py
tests/unit/audit/: test_disparate_impact.py  test_fairness.py
tests/unit/formatters/: test_json_out.py  test_reviewer.py
tests/unit/stages/: test_claims_categorize.py  test_claims_decompose.py  test_claims_severity.py  test_depth.py  test_orchestrate.py  test_rubric.py  test_scoring.py
tests/unit/storage/: test_sqlite_log.py
tests/unit/verify/: test_citation_exists.py  test_confidence.py  test_entailment.py  test_http_client.py  test_metadata.py  test_orcid.py  test_temporal.py
(+13 files in other folders)
