[project]
name = "evalit-4me"
version = "0.0.2"
description = "Open-source reference implementation of the 5-layer AI evaluation framework for academic peer review."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Niruta Talwekar" }]
keywords = ["peer-review", "llm", "evaluation", "academic", "iclr", "neurips"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.7",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6.0",
    "typer>=0.24.1",
]

[project.optional-dependencies]
# PDF ingest: marker-pdf provides the `marker_single` CLI that our
# subprocess-based MarkerRunner shells out to for full-fidelity parsing.
# pypdf is a lightweight text extractor used by `quick_parser` for
# venue-config detection — it reads a handful of pages in <1s so users
# don't wait minutes on marker just to sniff the venue. Optional because
# marker is heavy (~2 GB model weights) and GPLv3.
pdf = ["marker-pdf>=1.10.2", "pypdf>=5.0"]
mcp = ["mcp>=1.0"]
dashboard = ["streamlit>=1.38"]
bench = []

[project.scripts]
evalit = "evalit_4me.cli:main"

[project.urls]
Homepage = "https://github.com/niruta25/evalit-4me"
Issues = "https://github.com/niruta25/evalit-4me/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalit_4me"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B"]
# Typer uses `Option(...)` / `Argument(...)` as default values — that's the
# documented idiom. B008 is inappropriate here.
"src/evalit_4me/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/evalit_4me"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
